refreshCache toggle is working

--- a/dev/css/o4t-pagination.css
+++ b/dev/css/o4t-pagination.css
@@ -1,15 +1,15 @@
-.container {
+/* .container {
     margin: auto;
     text-align: center;
-}
+} */
 
-input {
+/* input {
     font-size: 24px;
     width: 80%;
     margin-bottom: 2rem;
     border: 1px solid;
     padding: 5px;
-}
+} */
 
 /* #results-treatments {
     margin-bottom: 1rem;
