--- a/dev/css/o4t-base.css
+++ b/dev/css/o4t-base.css
@@ -1,3 +1,11 @@
+:root {
+
+    /* settings for grid */
+    --column-count: 1;
+    --column-gap: 20px;
+    --image-250: 250px;
+}
+
 body {
     display: flex;
     flex-direction: column;
