--- a/dev/css/o4t-media-queries.css
+++ b/dev/css/o4t-media-queries.css
@@ -8,6 +8,20 @@
     :root {
         --column-count: 2 !important;
     }
+
+    .range {
+        display: inline-block;
+    }
+
+    .pager div {
+        padding: 5px 7px;
+        border: 1px solid;
+        border-right: none;
+    }
+    
+    .pager div:last-of-type {
+        border: 1px solid;
+    }
 }
 
 /* Larger than tablet */
