removed $ from non-column params

--- a/dev/css/o4t-pager.css
+++ b/dev/css/o4t-pager.css
@@ -50,10 +50,17 @@ td {
 
  /* table done */
 
-.range {
-    display: none;
+ /* .range:before {
+        content: ': '
+} */
+
+#treatments-pager,
+#figures-pager { 
+        clear: both;
 }
 
-.range:before {
-    content: ': '
+div.pager-cell {
+    float: left;
+    font-family: sans-serif;
+    font-size: 10px;
 }
