--- a/dev/css/o4t-media-queries.css
+++ b/dev/css/o4t-media-queries.css
@@ -15,12 +15,12 @@
 
     .pager div {
         padding: 5px 7px;
-        border: 1px solid;
-        border-right: none;
+        /* border: 1px solid;
+        border-right: none; */
     }
     
     .pager div:last-of-type {
-        border: 1px solid;
+        /* border: 1px solid; */
     }
 }
 
