--- a/dev/css/o4-map.css
+++ b/dev/css/o4-map.css
@@ -30,12 +30,38 @@ body {
 }
 div.info {
     background-color: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
     opacity: 0.8;
     border-radius: 5px;
     border: 1px solid;
-    padding: 1rem;
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
     width: 150px;
 }
 .my-class {
     width: 250px;
+    min-height: 100px;
 }
+
+.interval {
+    clear: both;
+}
+.interval_color_tile {
+    width: 20px;
+    height: 20px;
+    border: 1px solid #000;
+    float: left;
+    margin-right: 5px;
+}
+
+.interval_color_7 { background-color: #b10026; }
+.interval_color_6 { background-color: #e31a1c; }
+.interval_color_5 { background-color: #fc4e2a; }
+.interval_color_4 { background-color: #fd8d3c; }
+.interval_color_3 { background-color: #feb24c; }
+.interval_color_2 { background-color: #fed976; }
+.interval_color_1 { background-color: #ffeda0; }
+.interval_color_0 { background-color: #ffffcc; }
+
+.interval_text { width: 100px; }
