--- a/dev/css/i-grid.css
+++ b/dev/css/i-grid.css
@@ -1,11 +1,11 @@
-#container {
+/* #container {
     display: flex;
     flex-flow: column;
     width: 100%;
     height: 100%;
     position: relative;
     text-align: center;
-}
+} */
 
 /* #hide-unhide {
     height: 40px;
@@ -48,7 +48,7 @@ figure {
     height: auto;
     border: 1px solid;
     padding: 0;
-    margin: 0 0 20px 0;
+    margin: 0 auto 20px auto;
     opacity: 1;
 
     /* avoid figures splitting across columns */
@@ -64,14 +64,14 @@ figure img {
 }
 
 figure.treatment:before {
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
     content: 'T';
     position: absolute;
-    background-color: grey;
-    color: white;
+    background-color: white;
+    color: grey;
     font-family: sans-serif;
     padding: 2px 4px;
+    width: 20px;
+    text-align: center;
 }
 figure.figure-250 { width: 250px; }
 figure.figure-100 { width: 100px; }
@@ -79,13 +79,17 @@ figure.figure-100 { width: 100px; }
 figcaption {
     font-size: 10px;
     font-family: sans-serif;
-    padding: 5px;
+    padding: 5px 5px 0 5px;
     text-align: left;
     cursor: pointer;
 }
 
-figcaption .desc {
+figcaption div.closed {
+    height: 0;
+}
 
+figcaption div.open {
+    height: 100%;
 }
 
 @-webkit-keyframes fadeIn {
@@ -152,3 +156,24 @@ div.close:hover:before {
     content: 'x';
 } 
 */
+#search-criteria,
+#pager {
+    text-align: center;
+}
+#search-criteria {
+    margin-bottom: 1rem;
+}
+#pager {
+    /* border-top: 1px solid silver; */
+    margin-top: 3rem;
+}
+#pager.filled {
+    border-top: 1px solid silver;
+}
+#pager a {
+    margin: 1rem;
+}
+.crit-count,
+.crit-key {
+    font-weight: 800;
+}
