--- a/dev/css/i-form.css
+++ b/dev/css/i-form.css
@@ -271,3 +271,42 @@ z-index: 2;
 .tristate-switcher > input[type=radio]:checked + input[type=radio] + input[type=radio] + i:before {
     background-color: black;
 }
+#help { 
+    color: blue;
+    text-decoration: underline;
+    padding-left: 12px;
+    cursor: help;
+}
+.examples {
+    position: absolute;
+    background-color: white;
+    border: 1px solid lightgrey;
+    width: 100%;
+    padding: 10px;
+    z-index: 999;
+    box-shadow: 0 1px 8px 1px rgba(0, 0, 0, 0.3);
+}
+#help,
+.examples {
+    font-family: sans-serif;
+    font-size: small;
+    text-align: left;
+}
+p.example-desc {
+    margin-top: 0px;
+    margin-left: 12px;
+    font-style: italic;
+    font-family: serif;
+}
+summary {
+    cursor: pointer;
+}
+button.example-insert {
+    border: none;
+    background-color: white;
+    color: blue;
+    text-decoration: underline;
+}
+button.example-insert:hover {
+    background-color: lightgrey;
+}
