--- a/dev/css/i-grid.css
+++ b/dev/css/i-grid.css
@@ -63,7 +63,7 @@ figure img {
     /* cursor: pointer; */
 }
 
-figure.treatment:before {
+/* figure.treatment:before {
     content: 'T';
     position: absolute;
     background-color: white;
@@ -72,7 +72,7 @@ figure.treatment:before {
     padding: 2px 4px;
     width: 20px;
     text-align: center;
-}
+} */
 figure.figure-250 { width: 250px; }
 figure.figure-100 { width: 100px; }
 
