figure-250 is 300px now at mobile sizes

--- a/dev/css/i-media-queries.css
+++ b/dev/css/i-media-queries.css
@@ -9,6 +9,7 @@
         --column-count: 2 !important;
     }
 
+    figure.figure-250 { width: 250px; }
     .range {
         display: inline-block;
     }
