--- a/dev/css/i-header.css
+++ b/dev/css/i-header.css
@@ -1,13 +1,14 @@
 header {
     text-align: center;
     border-bottom: 1px solid silver;
-    padding-bottom: 2rem;
+    padding: 0 10px 10px 10px;
     position: relative;
     display: block;
 }
 
 header div.title {
     margin-bottom: 1rem;
+    display: none;
 }
 
 header h1 {
