--- a/dev/css/i-base.css
+++ b/dev/css/i-base.css
@@ -1,18 +1,20 @@
 :root {
 
-    /* settings for grid */
-    --column-count: 1;
+    /* settings for the grid */
     --column-gap: 20px;
-    --image-250: 250px;
+    --image-size: 250px;
+    --column-count: 1;
+    --columns-width: calc( var(--image-size) * var(--column-count) );
+    --gaps-width: calc( (var(--column-count) - 1) * var(--column-gap) );
+    --grid-width: calc( var(--columns-width) + var(--gaps-width) );
+    
 }
 html,
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* padding-bottom: 0; */
     max-width: unset;
-    /* height: 100%; */
     margin: 0;
     padding: 0px;
 }
@@ -26,11 +28,6 @@ a:hover {
     border: 1px solid lightgray;
     border-radius: 2px;
 }
-/* #container {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-} */
 main {
     flex: 1 1 auto;
     position: relative;
@@ -60,18 +57,6 @@ div.title a,
     /* https://www.w3schools.com/csS/css3_shadows_box.asp */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-/* .show {
-    display: inline-block;
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
-}
-
-.hide {
-    display: none;
-    visibility: hidden;
-} */
 .block {
     display: block;
 }
