--- a/dev/css/i-grid.css
+++ b/dev/css/i-grid.css
@@ -1,38 +1,70 @@
-/* #container {
-    display: flex;
-    flex-flow: column;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    text-align: center;
-} */
-
-/* #hide-unhide {
-    height: 40px;
-    border-radius: 5px;
-    border: 1px solid lightgray;
-    float: left;
-    margin-bottom: 1rem;
-} */
-
 table {
     margin: unset;
 }
 
-#grid-images {
+.columns-250 {
+
+    /* settings for the grid */
+    --column-count: 1;
+    --column-gap: 20px;
+    --image-size: 250px;
+    --columns-width: calc( var(--image-size) * var(--column-count) );
+    --gaps-width: calc( (var(--column-count) - 1) * var(--column-gap) );
+    --grid-width: calc( var(--columns-width) + var(--gaps-width) );
+
     width: var(--grid-width);
     max-width: var(--grid-width);
     margin: 0 auto;
-}
 
-.columns {
     column-count: var(--column-count);
     -webkit-column-count: var(--column-count);
     -moz-column-count: var(--column-count);
     
-    /* column-width: var(--column-width);
-    -webkit-column-width: var(--column-width);
-    -moz-column-width: var(--column-width); */
+    column-gap: var(--column-gap);
+    -moz-column-gap: var(--column-gap);
+    -webkit-column-gap: var(--column-gap);
+}
+
+.columns-100 {
+
+    /* settings for the grid */
+    --column-count: 3;
+    --column-gap: 10px;
+    --image-size: 100px;
+    --columns-width: calc( var(--image-size) * var(--column-count) );
+    --gaps-width: calc( (var(--column-count) - 1) * var(--column-gap) );
+    --grid-width: calc( var(--columns-width) + var(--gaps-width) );
+
+    width: var(--grid-width);
+    max-width: var(--grid-width);
+    margin: 0 auto;
+
+    column-count: var(--column-count);
+    -webkit-column-count: var(--column-count);
+    -moz-column-count: var(--column-count);
+    
+    column-gap: var(--column-gap);
+    -moz-column-gap: var(--column-gap);
+    -webkit-column-gap: var(--column-gap);
+}
+
+.columns-50 {
+
+    /* settings for the grid */
+    --column-count: 5;
+    --column-gap: 10px;
+    --image-size: 50px;
+    --columns-width: calc( var(--image-size) * var(--column-count) );
+    --gaps-width: calc( (var(--column-count) - 1) * var(--column-gap) );
+    --grid-width: calc( var(--columns-width) + var(--gaps-width) );
+
+    width: var(--grid-width);
+    max-width: var(--grid-width);
+    margin: 0 auto;
+
+    column-count: var(--column-count);
+    -webkit-column-count: var(--column-count);
+    -moz-column-count: var(--column-count);
     
     column-gap: var(--column-gap);
     -moz-column-gap: var(--column-gap);
@@ -51,7 +83,6 @@ figure {
     height: auto;
     border: 1px solid;
     padding: 0;
-    margin: 0 auto 20px auto;
     opacity: 1;
 
     /* avoid figures splitting across columns */
@@ -63,6 +94,12 @@ figure {
 
 figure img {
     width: 100%;
+}
+figure a:hover {
+    background-color: unset;
+    padding: unset;
+    border: unset;
+    border-radius: unset;
 }
 figure .reveal {
     background-color: white;
@@ -79,9 +116,19 @@ figure .reveal:hover {
     background-color: lightgrey;
     color: black;
 }
-figure.figure-250 { width: 250px; }
-figure.figure-100 { width: 100px; }
-figure.figure-50 { width: 50px; }
+
+figure.figure-250 { 
+    width: 250px; 
+    margin: 0 auto 20px auto;
+}
+figure.figure-100 { 
+    width: 100px; 
+    margin: 0 auto 10px auto;
+}
+figure.figure-50 { 
+    width: 50px; 
+    margin: 0 auto 10px auto;
+}
 
 figcaption {
     font-size: 10px;
