--- a/dev/css/i-media-queries.css
+++ b/dev/css/i-media-queries.css
@@ -1,11 +1,27 @@
 /* Mobile first queries */
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+    .columns-50 {
+        --column-count: 6 !important;
+    }
+
+    .columns-100 {
+        --column-count: 3 !important;
+    }
+}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
-    :root {
+    .columns-50 {
+        --column-count: 9 !important;
+    }
+
+    .columns-100 {
+        --column-count: 5 !important;
+    }
+
+    .columns-250 {
         --column-count: 2 !important;
     }
 
@@ -17,7 +33,6 @@
         display: block;
     }
 
-    figure.figure-250 { width: 250px; }
     .range {
         display: inline-block;
     }
@@ -29,7 +44,15 @@
 
 /* Larger than tablet */
 @media (min-width: 800px) {
-    :root {
+    .columns-50 {
+        --column-count: 13 !important;
+    }
+
+    .columns-100 {
+        --column-count: 7 !important;
+    }
+
+    .columns-250 {
         --column-count: 3 !important;
     }
 
@@ -47,41 +70,89 @@
 
 /* Larger than desktop */
 @media (min-width: 1100px) {
-    :root {
+    .columns-50 {
+        --column-count: 18 !important;
+    }
+
+    .columns-100 {
+        --column-count: 10 !important;
+    }
+    
+    .columns-250 {
         --column-count: 4 !important;
     }
 }
 
 /* Larger than Desktop HD */
 @media (min-width: 1400px) {
-    :root {
+    .columns-50 {
+        --column-count: 23 !important;
+    }
+
+    .columns-100 {
+        --column-count: 12 !important;
+    }
+
+    .columns-250 {
         --column-count: 5 !important;
     }
 }
 
 /* Larger than Desktop HD */
 @media (min-width: 1920px) {
-    :root {
+    .columns-50 {
+        --column-count: 32 !important;
+    }
+
+    .columns-100 {
+        --column-count: 17 !important;
+    }
+
+    .columns-250 {
         --column-count: 7 !important;
     }
 }
 
 /* Larger than Desktop HD */
 @media (min-width: 2300px) {
-    :root {
+    .columns-50 {
+        --column-count: 38 !important;
+    }
+
+    .columns-100 {
+        --column-count: 21 !important;
+    }
+
+    .columns-250 {
         --column-count: 8 !important;
     }
 }
 
 /* Larger than Desktop HD */
 @media (min-width: 2500px) {
-    :root {
+    .columns-50 {
+        --column-count: 41 !important;
+    }
+
+    .columns-100 {
+        --column-count: 22 !important;
+    }
+
+    .columns-250 {
         --column-count: 9 !important;
     }
 }
 
 @media (min-width: 3000px) {
-    :root {
+    .columns-50 {
+        --column-count: 50 !important;
+    }
+
+    .columns-100 {
+        --column-count: 27 !important;
+    }
+
+    .columns-250 {
         --column-count: 11 !important;
     }
 }
