treatmentimages instead of treatments

--- a/dev/css/i-grid.css
+++ b/dev/css/i-grid.css
@@ -91,9 +91,9 @@ figure {
     break-inside: avoid-column;
     -webkit-column-break-inside: avoid;
 }
-figure.tb {
+/* figure.tb {
     
-}
+} */
 figure img {
     width: 100%;
 }
