--- a/css/header.css
+++ b/css/header.css
@@ -19,10 +19,7 @@ header div.subtitle {
 }
 
 header h1 {
-/*     margin: 0 auto; */
-/*     margin-bottom: -10px; */
-    margin: 0;
-    margin-left: 0;
+    margin: 0 0 -10px 0;
 }
 
 header a:hover {
