--- a/css/searchSwitcher.css
+++ b/css/searchSwitcher.css
@@ -1,24 +1,36 @@
-#switchSearch {
+.switch {
     --ss-switch-width: 40px;
     --ss-toggle-width: 10px;
     --ss-switch-height: 30px;
 }
-#switchSearch {
+#fs .switch,
+#ns .switch {
+    float: left;
+    padding: 5px 0;
+    width: var(--ss-switch-width);
+    height: var(--ss-switch-height);
+    border: none;
+    left: 7px;
+    top: 1px;
+}
+#bottom-menu .switch {
+    float: right;
     margin: 0 15px;
     padding: 5px 0;
     width: var(--ss-switch-width);
     height: var(--ss-switch-height);
     border: none;
-    float: right;
     right: 35px;
 }
-#switch {
+.switch input[type=checkbox] {
     height: 0;
     width: 0;
     visibility: hidden;
     float: left;
 }
-label[for=switch] {
+label[for=switchSource-fs],
+label[for=switchSource-ns] ,
+label[for=switchSearch] {
     cursor: pointer;
 /*     text-indent: -9999px; */
     width: var(--ss-switch-width);
@@ -30,8 +42,9 @@ label[for=switch] {
     position: relative;
     font-size: 10px;
 }
-label[for=switch]:after {
-    content: 'ns';
+label[for=switchSource-fs]:after,
+label[for=switchSource-ns]:after,
+label[for=switchSearch]:after {
     line-height: 20px;
     text-align: center;
     position: absolute;
@@ -43,14 +56,31 @@ label[for=switch]:after {
     background: #fff;
     transition: 0.3s;
 }
-#switch:checked + label {
+label[for=switchSource-fs]:after,
+label[for=switchSource-ns]:after {
+    content: 'tr';
+}
+label[for=switchSearch]:after {
+    content: 'ns';
+}
+input[name=switchSearch]:checked + label {
     background: #bada55;
 }
-#switch:checked + label:after {
+input[name=switchSource-fs]:checked + label:after, 
+input[name=switchSource-ns]:checked + label:after, 
+input[name=switchSearch]:checked + label:after {
     left: calc( var(--ss-toggle-width) - 2px );
     transform: translateX(calc(100% - (var(--ss-switch-width) - var(--ss-toggle-width))));
+}
+input[name=switchSearch]:checked + label:after {
     content: 'fs';
 }
-label[for=switch]:active:after {
+input[name=switchSource-fs]:checked + label:after,
+input[name=switchSource-ns]:checked + label:after {
+    content: 'im';
+}
+label[for=switchSource-fs]:active:after,
+label[for=switchSource-ns]:active:after,
+label[for=switchSearch]:active:after {
     width: calc( var(--ss-switch-width) - var(--ss-toggle-width) );
 }
