--- a/css/grid.css
+++ b/css/grid.css
@@ -162,6 +162,28 @@ figcaption div.figTitle {
 figcaption div.open {
     height: 100%;
 }
+details {
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    padding: 0.5em 0.5em 0;
+}
+
+summary {
+    font-weight: bold;
+    margin: -0.5em -0.5em 0;
+    padding: 0.5em;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1);
+}
+
+details[open] {
+    padding: 0.5em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 0.5em;
+}
+
 
 @-webkit-keyframes fadeIn {
     from { opacity: 0; }
