added status search for new species

--- a/css/grid.css
+++ b/css/grid.css
@@ -199,9 +199,9 @@ p.citation {
 }
 
 span.articleTitle {
-    font-family: serif;
+    font-family: Lora, serif;
     font-style: italic;
-    font-size: 120%;
+    /* font-size: 120%; */
 }
 
 span.journalTitle {
