--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 header {
     text-align: center;
-    border-bottom: 1px solid silver;
+    /* border-bottom: 1px solid silver; */
 /*     padding: 0 10px 10px 10px; */
     position: relative;
     display: block;
