adv search visible only in tablets and more

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -54,6 +54,10 @@
     .modal {
         max-width: unset;
     }
+
+    div.r {
+        visibility: visible;
+    }
 }
 
 /* Larger than tablet */
